--- a/fs/Makefile
+++ b/fs/Makefile
@@ -134,3 +134,14 @@ obj-$(CONFIG_CEPH_FS)		+= ceph/
 obj-$(CONFIG_PSTORE)		+= pstore/
 obj-$(CONFIG_EFIVAR_FS)		+= efivarfs/
 obj-$(CONFIG_EROFS_FS)		+= erofs/
+
+# filter instantnoodle, instantnoodlep ...
+ifeq ($(filter instantnoodle% ebba%, $(OEM_TARGET_PRODUCT)),)
+KBUILD_CFLAGS += -DUFS3V1
+else
+ifneq ($(filter ebba%, $(OEM_TARGET_PRODUCT)),)
+KBUILD_CFLAGS += -DUFS2V1
+else
+KBUILD_CFLAGS += -DUFS3V0
+endif
+endif
